--- a/platforms.html
+++ b/platforms.html
@@ -84,18 +84,36 @@ thead { position: sticky; top: 0; }
 										<td><a href="app"><h2>Open</h2></a></td>
 									</tr>
 									<tr><td><h4 style="transform:translate(0,-10px)">Play<br/>On-Screen<br/>Keyboard</h4></td>
-										<td colspan="4"><p><h2>Yes</h2></p></td>
+										<td colspan="4" bgcolor="#4DFA90"><p><h2>Yes</h2></p></td>
 									</tr>
 									<tr><td><h4 style="transform:translate(0,-10px)">Playback</h4></td>
-										<td colspan="4"><p><h2>Yes</h2></p></td>
+										<td colspan="4" bgcolor="#4DFA90"><p><h2>Yes</h2></p></td>
 										<!-- <td colspan="1"><p><h5>Planned</h5></p></td> -->
 									</tr>
 									<tr><td><h4 style="transform:translate(0,-10px)">Recording</h4></td>
-										<td colspan="3"><p><h2>Yes</h2></td>
-										<td colspan="1"><p><h2>No</h2></p></td>
+										<td colspan="3" bgcolor="#4DFA90"><p><h2>Yes</h2></td>
+										<td colspan="1" bgcolor="#F93730"><p><h2>No</h2></p></td>
+									</tr>
+									<tr><td><h4 style="transform:translate(0,-10px)">Import<br/>Built-in<br/>Samples</h4></td>
+										<td colspan="4" bgcolor="#4DFA90"><p><h2>Yes</h2></p></td>
+									</tr>
+									<tr><td><h4 style="transform:translate(0,-10px)">Import<br/>From Stored<br/>Scores</h4></td>
+										<td colspan="3" bgcolor="#4DFA90"><p><h2>Yes</h2></td>
+										<td colspan="1" bgcolor="#F93730"><p><h2>No</h2></p></td>
+									</tr>
+									<tr><td><h4 style="transform:translate(0,-10px)">Export<br/>MIDI<br/>Data</h4></td>
+										<td colspan="2" bgcolor="#4DFA90"><p><h2>Yes</h2></td>
+										<td colspan="1" bgcolor="#CFFA53"><p><h4>Coming Soon</h4></td>
+										<td colspan="1" bgcolor="#F93730"><p><h2>No</h2></p></td>
+									</tr>
+									<tr><td><h4 style="transform:translate(0,-10px)">Export<br/>MusicXML</h4></td>
+										<td colspan="4"><p><h2>TBD</h2></td>
+									</tr>
+									<tr><td><h4 style="transform:translate(0,-10px)">Export<br/>Audio</h4></td>
+										<td colspan="4"><p><h2>TBD</h2></td>
 									</tr>
 									<tr><td><h4 style="transform:translate(0,-10px)">Edit/arrange<br/>recordings and<br/>share links</h4></td>
-										<td colspan="4"><p><h2>Yes</h2></p></td>
+										<td colspan="4" bgcolor="#4DFA90"><p><h2>Yes</h2></p></td>
 										<!-- <td colspan="1"><p><h5>Planned</h5></p></td> -->
 									</tr>
 									<tr><td><h4>MIDI<br/>Channels<br/>Supported<br/></h4></td>
@@ -105,45 +123,45 @@ thead { position: sticky; top: 0; }
 										<td colspan="1"><h2><br/>16</h2></td>
 									</tr>
 									<tr><td><h4>128<br/>MIDI<br/>Sounds<br/>+<br/>Drum Patch</h4></td>
-										<td colspan="3"><p><h2>Yes</h2></p></td>
-										<td colspan="1"><p><h5>127; "synth drums"<br/>are the drum patch.</h5></p></td>
+										<td colspan="3" bgcolor="#4DFA90"><p><h2>Yes</h2></p></td>
+										<td colspan="1" bgcolor="#CFFA53"><p><h5>127; "synth drums"<br/>are the drum patch.</h5></p></td>
 									</tr>
 									<tr><td><h4 style="transform:translate(0,-10px)">Play<br/>Connected<br/>MIDI<br/>Controllers</h4></td>
-										<td colspan="3"><p><h2>Yes</h2></p></td>
-										<td colspan="1"><p>
+										<td colspan="3" bgcolor="#4DFA90"><p><h2>Yes</h2></p></td>
+										<td colspan="1" bgcolor="#CFFA53"><p>
 											<h5>Planned;<br/><a href="https://caniuse.com/#search=midi">See caniuse.com</a></h5>
 										</p></td>
 									</tr>
 									<tr><td><h4 style="transform:translate(0,30px)">Bluetooth<br/>Controller<br/>Support</h4></td>
-										<td style="transform:translate(0,20px)" colspan="2"><h4>Your choice of app</h4>
+										<td colspan="2" bgcolor="#4DFA90"><h4>Your choice of app</h4>
 											<h5>(e.g.
 												<a href="https://apps.apple.com/us/app/bluetooth-midi-connect/id1108321791">KORG's iOS app</a>,<br/>
 												<a href="https://apps.apple.com/us/app/bluetooth-midi-connect/id1074606480">KORG's macOS app</a>,<br/>
 												<a href="https://apps.apple.com/us/app/midimittr/id925495245">midimttr for iOS</a>
 											)</h5></td>
-										<td colspan="1">
+										<td colspan="1" bgcolor="#4DFA90">
 											<h5>Your choice, but</h5>
 											<h4><a href="https://play.google.com/store/apps/details?id=com.mobileer.example.midibtlepairing&hl=en_US&gl=US">
 												Mobileer<br/>MIDI BLE Connect
 											</a></h4><h5>integrates<br/>into the UI</h5></td>
-										<td colspan="1"><h2>No</h2></td>
+										<td colspan="1" bgcolor="#F93730"><h2>No</h2></td>
 									</tr>
 									<tr><td><h4 style="transform:translate(0,-10px)">Play<br/>Connected<br/>MIDI<br/>Sythnesizers</h4></td>
-										<td colspan="2"><p><h2>No</h2></p></td>
-										<td colspan="1"><p><h2>Yes</h2></p></td>
-										<td colspan="1"><p>
+										<td colspan="2" bgcolor="#F93730"><p><h2>No</h2></p></td>
+										<td colspan="1" bgcolor="#4DFA90"><p><h2>Yes</h2></p></td>
+										<td colspan="1" bgcolor="#CFFA53"><p>
 											<h5>Planned;<br/><a href="https://caniuse.com/#search=midi">See caniuse.com</a></h5>
 										</p></td>
 									</tr>
 									<tr><td><h4 style="transform:translate(0,-10px)">Integrated<br/>Synthesizer<br/>Speed/<br/>Quality</h4></td>
-										<td colspan="2"><p><h2>Excellent</h2></p></td>
-										<td colspan="1"><h2>Good</h2>
+										<td colspan="2" bgcolor="#4DFA90"><p><h2>Excellent</h2></p></td>
+										<td colspan="1" bgcolor="#59F9FF"><h2>Good</h2>
 											<h5>Near-excellent<br/>with</h5>
 											<h4><a href="https://play.google.com/store/apps/details?id=net.volcanomobile.fluidsynthmidi&hl=en_US&gl=US">
 												Volcano Mobile<br/>FluidSynth<br/>MIDI Synthesizer
 											</a></h4>
 										</td>
-										<td colspan="1">
+										<td colspan="1" bgcolor="#CFFA53">
 											<h2>Eh...</h2>
 											<h5>Can your<br/>browser<br/>run <i>FarCry</i>?</h5>
 										</td>
