Update many things

--- a/platforms.html
+++ b/platforms.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Platform Support - BeatScratch</title>
+		<title>Platform Support: BeatScratch</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,7 +36,9 @@ thead { position: sticky; top: 0; }
 							<li><a href="usage.html">Usage</a></li>
 							<li class="active"><a href="platforms.html">Platforms</a></li>
 							<li><a href="hardware.html">Hardware</a></li>
+							<li><a href="open_source.html">Open Source</a></li>
 							<li><a href="https://medium.com/fully-automated-luxury-robot-music">Blog</a></li>
+							<li><a href="about.html">About</a></li>
 						</ul>
 						<!--ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -167,7 +169,7 @@ thead { position: sticky; top: 0; }
 										</td>
 									</tr>
 										
-										<tr><td colspan="5"><br/><h2>Architectural Components:</h2></td></tr>
+										<tr><td colspan="5"><br/><h2 id="Architectural-Components">Architectural Components:</h2></td></tr>
 										<tr><td><h3>User<br/>Interface</h3></td>
 											<td colspan="4"><a class="icon" style="top:30px;" href="https://flutter.dev/"><img src="assets/flutter.png" width="300" height="87"/></a></td></tr>
 										<tr><td><h3>Data<br/>Modeling</h3></td>
@@ -188,6 +190,9 @@ thead { position: sticky; top: 0; }
 										</tbody>
 								</table>
 							</div>
+							<p><br/>
+								<span class="image main" style="max-width: 600px; height: auto; margin-left: auto; margin-right: auto;"><img src="images/languages.png" alt="" /></span>
+							</p>
 							</article>
 
 					</div>
