--- a/usage.html
+++ b/usage.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Usage - BeatScratch</title>
+		<title>Usage: BeatScratch</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,7 +30,9 @@
 							<li class="active"><a href="usage.html">Usage</a></li>
 							<li><a href="platforms.html">Platforms</a></li>
 							<li><a href="hardware.html">Hardware</a></li>
+							<li><a href="open_source.html">Open Source</a></li>
 							<li><a href="https://medium.com/fully-automated-luxury-robot-music">Blog</a></li>
+							<li><a href="about.html">About</a></li>						
 						</ul>
 						<!--ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
