--- a/hardware.html
+++ b/hardware.html
@@ -30,7 +30,9 @@
 							<li><a href="usage.html">Usage</a></li>
 							<li><a href="platforms.html">Platforms</a></li>
 							<li class="active"><a href="hardware.html">Hardware</a></li>
+							<li><a href="open_source.html">Open Source</a></li>
 							<li><a href="https://medium.com/fully-automated-luxury-robot-music">Blog</a></li>
+							<li><a href="about.html">About</a></li>
 						</ul>
 						<!--ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
