--- a/about.html
+++ b/about.html
@@ -63,7 +63,8 @@ thead { position: sticky; top: 0; }
 									<h2>Attributions</h2>
 									<p>
 										BeatScratch uses some icons and graphics requiring attribution, and some not. Some open-source components
-										(whose licenses are carefully followed) and plenty of proprietary code.
+										(whose licenses are carefully followed) and plenty of proprietary code. The following attributions for dope 
+										UI components are mandated by some Creative Commons license or another:
 									</p>
 									<p>
 										<ul>
