--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 											</a>
 										</li>
 										<li>
-											<a class="icon" href="https://play.google.com/apps/testing/io.beatscratch.beatscratch_flutter_redux" >
+											<a class="icon" href="https://play.google.com/store/apps/details?id=io.beatscratch.beatscratch_flutter_redux" >
 												<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
 											</a>
 										</li>
