--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
 						<p>funk at your fingertips</p>
 						<ul class="actions">
 							<li>
-								<a class="icon" href="https://www.dropbox.com/s/71jclv5a5tgd1c7/BeatFlutter.tar.bz2?dl=1" style="top:20px;">
-									<img style="background-color: grey;" src="assets/macos-download.png" width="150" height="47">
+								<a class="icon" href="https://apps.apple.com/us/app/beatscratch/id1509788448" style="top:20px;">
+									<img style="max-width: 100%" src="assets/app_store.png" width="140px" height="47px" />
 								</a>
 							</li>
 							<li>
-								<a class="icon" href="https://testflight.apple.com/join/dXJr9JJs" style="top:20px;">
-									<img style="max-width: 100%" src="assets/testflight-badge.png" width="163px" height="63px" />
-								</a>
-							</li>
-							<li>
-								<a class="icon" href="https://play.google.com/apps/testing/io.beatscratch.beatscratch_flutter_redux" style="top:20px;">
+								<a class="icon" href="https://play.google.com/store/apps/details?id=io.beatscratch.beatscratch_flutter_redux" style="top:20px;">
 									<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
 								</a>
 							</li>
 							<li>
+								<a class="icon" href="https://www.dropbox.com/s/71jclv5a5tgd1c7/BeatFlutter.tar.bz2?dl=1" style="top:20px;">
+									<img style="background-color: grey;" src="assets/macos-download.png" width="150px" height="47px">
+								</a>
+							</li>
+							<li>
 								<header id="header">
-									<a href="app" class="logo" style="font-size: 1rem; padding: 0.75rem; transform: translate(5px, 7px);">Web Preview</a>
+									<a href="app" class="logo" style="font-size: 1rem; padding: 0.75rem; transform: translate(5px, 0px);">Web Preview</a>
 								</header>
 							</li>
 						</ul>
@@ -110,17 +110,11 @@
 								<li>
 									<a href="#BeatFlutter">
 										<h2>BeatScratch</h2>
-										<h4>aka BeatFlutter</h4>
 									</a>
 									<ul class="actions">
 										<li>
-											<a class="icon" href="https://www.dropbox.com/s/71jclv5a5tgd1c7/BeatFlutter.tar.bz2?dl=1">
-												<img style="background-color: grey;" src="assets/macos-download.png" width="150" height="47">
-											</a>
-										</li>
-										<li>
-											<a class="icon" href="https://testflight.apple.com/join/dXJr9JJs">
-												<img style="max-width: 100%" src="assets/testflight-badge.png" width="163px" height="63px" />
+											<a class="icon" href="https://apps.apple.com/us/app/beatscratch/id1509788448">
+												<img style="max-width: 100%" src="assets/app_store.png" width="140px" height="47px" />
 											</a>
 										</li>
 										<li>
@@ -129,8 +123,19 @@
 											</a>
 										</li>
 										<li>
-											<a href="app" class="logo" style="padding-top:10px;"><h3>Web Preview</h3></a>
+											<a class="icon" href="https://www.dropbox.com/s/71jclv5a5tgd1c7/BeatFlutter.tar.bz2?dl=1">
+												<img style="background-color: grey;" src="assets/macos-download.png" width="150" height="47">
+											</a>
 										</li>
+										<li>
+											<a href="app" class="logo"><h3 style="transform: translate(0, 5px);">Web<br/>Preview</h3></a>
+										</li>
+										<li><a class="icon" href="https://testflight.apple.com/join/dXJr9JJs">
+											<img style="max-width: 100%" src="assets/testflight-badge.png" width="163px" height="63px" />
+										</a></li>
+										<li><a class="icon" href="https://play.google.com/apps/testing/io.beatscratch.beatscratch_flutter_redux" style="top:0px;">
+											<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" /> <h4>Beta</h4>
+										</a></li>
 									</ul>
 								</li>
 								<li>
