--- a/platforms.html
+++ b/platforms.html
@@ -74,16 +74,33 @@ thead { position: sticky; top: 0; }
 											</a>
 										</td>
 										<td>
-											<a class="icon" href="https://testflight.apple.com/join/dXJr9JJs" style="top:20px;">
+											<a class="icon" href="https://apps.apple.com/us/app/beatscratch/id1509788448" style="top:35px;">
+												<img style="max-width: 100%" src="assets/app_store.png" width="140px" height="47px" />
+											</a>
+										</td>
+										<td>
+											<a class="icon" href="https://play.google.com/store/apps/details?id=io.beatscratch.beatscratch_flutter_redux" style="top:45px;">
+												<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
+											</a>
+										</td>
+										<td><a href="app"><h2>Open</h2></a></td>
+									</tr>
+									<tr>
+										<td><h2>Beta</h2></td>
+										<td>
+											<h4>macOS build is <br/><i>always</i> Beta</h4>
+										</td>
+										<td>
+											<a class="icon" href="https://testflight.apple.com/join/dXJr9JJs" style="top:40px;">
 												<img style="max-width: 100%" src="assets/testflight-badge.png" width="163px" height="63px" />
 											</a>
 										</td>
 										<td>
 											<a class="icon" href="https://play.google.com/apps/testing/io.beatscratch.beatscratch_flutter_redux" style="top:20px;">
-												<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
+												<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" /><h4>Beta</h4>
 											</a>
 										</td>
-										<td><a href="app"><h2>Open</h2></a></td>
+										<td><a href="app-staging"><h2>Open<br/>Staging</h2></a></td>
 									</tr>
 									<tr><td><h4 style="transform:translate(0,-10px)">Play<br/>On-Screen<br/>Keyboard</h4></td>
 										<td colspan="4" bgcolor="#4DFA90"><p><h2>Yes</h2></p></td>
