add licenses to open_source.html

--- a/open_source.html
+++ b/open_source.html
@@ -72,6 +72,7 @@ thead { position: sticky; top: 0; }
 										<!-- <tr><td colspan="5"><br/><h2>Pre-Release Features</h2></td></tr> -->
 										<tr>
 											<th style="width: 15%; min-width: 100px;">Repo</th>
+											<th style="width: 15%; min-width: 50px;">License</th>
 											<th style="width: 60%; min-width: 210px;">Description</th>
 											<th style="width: 25%; min-width: 140px;">Status</th>
 											<!-- <th style="width:10%;"></td>
@@ -86,6 +87,7 @@ thead { position: sticky; top: 0; }
 											<td><h2>
 												<a style="color:#884DF2" href="https://github.com/falrm/protobeats" class="icon fa-github"><span class="label">protobeats</span>&nbsp;<pre>protobeats</pre></a>
 											</h2></td>
+											<td><h3>MIT</h3></td>
 											<!-- <td colspan="2" bgcolor="#4DFA90"><p><h2>Yes</h2></td> -->
 											<td><p>A protobuf file only. All the code and docs you need to open <i>*.beatscratch</i> files and read Score URLs.</p></td>
 											<td bgcolor="#4DFA90"><p></p><h2>Available</h2></p></td>
@@ -94,6 +96,7 @@ thead { position: sticky; top: 0; }
 											<td><h2>
 												<a style="color:#884DF2" href="https://github.com/falrm/beatscratch_plugin#" class="icon fa-github"><span class="label">beatscratch_plugin</span>&nbsp;<pre>beatscratch_plugin</pre></a>
 											</h2></td>
+											<td><h3>LGPL</h3></td>
 											<!-- <td colspan="2" bgcolor="#4DFA90"><p><h2>Yes</h2></td> -->
 											<td><p>
 												A Dart plugin that includes <i>protobeats</i> via Git submodule. Provides Dart implementations of File I/O, Score Link usage,
