--- a/index.html
+++ b/index.html
@@ -38,11 +38,6 @@
 									<img style="background-color: grey;" src="assets/macos-download.png" width="150px" height="47px">
 								</a>
 							</li>
-							<li>
-								<header id="header">
-									<a href="app" class="logo" style="font-size: 1rem; padding: 0.75rem; transform: translate(5px, 0px);">Web Preview</a>
-								</header>
-							</li>
 						</ul>
 					</div>
 
@@ -72,7 +67,24 @@
 
 				<!-- Main -->
 					<div id="main">
-
+<div style="text-align: center;">
+						<ul class="actions" style="padding-bottom: 10px;">
+							<li>
+								<a class="icon" href="https://apps.apple.com/us/app/beatscratch/id1509788448" style="top:20px;">
+									<img style="max-width: 100%" src="assets/app_store.png" width="140px" height="47px" />
+								</a>
+							</li>
+							<li>
+								<a class="icon" href="https://play.google.com/store/apps/details?id=io.beatscratch.beatscratch_flutter_redux" style="top:20px;">
+									<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
+								</a>
+							</li>
+							<li>
+								<a class="icon" href="https://www.dropbox.com/s/71jclv5a5tgd1c7/BeatFlutter.tar.bz2?dl=1" style="top:20px;">
+									<img style="background-color: grey;" src="assets/macos-download.png" width="150px" height="47px">
+								</a>
+							</li>
+						</ul></div>
 						<article class="post featured">
 							<header class="major">
 								<h2>BeatScratch</h2>
@@ -130,6 +142,13 @@
 												<img style="background-color: grey;" src="assets/macos-download.png" width="150" height="47">
 											</a>
 										</li>
+									</ul>
+								</li>
+								<li>
+									<a href="#BeatFlutterBeta">
+										<h2>BeatScratch: Beta Releases</h2>
+									</a>
+									<ul class="actions">
 										<li>
 											<a href="app" class="logo"><h3 style="transform: translate(0, 5px);">Web<br/>Preview</h3></a>
 										</li>
@@ -139,25 +158,6 @@
 										<li><a class="icon" href="https://play.google.com/apps/testing/io.beatscratch.beatscratch_flutter_redux" style="top:0px;">
 											<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" /> <h4>Beta</h4>
 										</a></li>
-									</ul>
-								</li>
-								<li>
-									<a href="#LegacyBeatScratch">
-										<h2>Legacy BeatScratch</h2>
-									</a>
-									<ul class="actions">
-										<li>
-											<a class="icon" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad">
-												<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
-												<br/><span>5-part support: free</span>
-											</a>
-										</li>
-										<li>
-											<a class="icon" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad">
-												<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
-												<br/><span>8-part support: $5</span>
-											</a>
-										</li>
 									</ul>
 								</li>
 							</ul>
