--- a/app-staging/index.html
+++ b/app-staging/index.html
@@ -71,21 +71,20 @@ window.onload = function () {
           MIDI.setVolume(0, 127);
 		}
 	});
+
+  var searchParams = new URLSearchParams(window.location.search);
+  if (searchParams.get('state') && searchParams.get('code')) {
+    notifyScoreUrlOpened(window.location.toString());
+  }
 };
 </script>
-<script>
-  if (window.location.hash.startsWith("#score=")) {
-    window.location.hash = window.location.hash.replace("score=","/score/");
-    location.reload();
-  }
-  </script>
 <!-- This script installs service_worker.js to provide PWA functionality to
      application. For more information, see:
      https://developers.google.com/web/fundamentals/primers/service-workers -->
 <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=308274055');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=3103634312');
       });
     }
   </script>
