--- a/app-staging/index.html
+++ b/app-staging/index.html
@@ -78,7 +78,7 @@ window.onload = function () {
   if (searchParams.get('state') && searchParams.get('code')) {
     var redditAuthUrl = window.location.toString();
     var nonAuthUrl = [location.protocol, '//', location.host, location.pathname, location.hash].join('');
-    window.history.replaceState(null, null, nonAuthUrl);
+    window.history.pushState(null, null, nonAuthUrl);
     function sendOAuthData() {
       if (typeof notifyScoreUrlOpened != 'undefined') {
         notifyScoreUrlOpened(redditAuthUrl);
